--- a/app/views/user_notifications/digest.html.erb
+++ b/app/views/user_notifications/digest.html.erb
@@ -151,10 +151,8 @@ body, table, td, th, h1, h2, h3 {font-family: Helvetica, Arial, sans-serif !impo
 <table style="border-bottom:1px solid #f3f3f3;padding:0;text-align:left;vertical-align:top;width:100%">
   <tbody>
     <tr>
-      <td style="padding:0 16px 16px 16px;text-align:left;width:100%;font-weight:normal;">
-        <p style="color:#0a0a0a;line-height:1.3;margin:0 0 10px 0;padding:0;font-weight:200;">
-          <%= email_excerpt(t.first_post.cooked) %>
-        </p>
+      <td style="color:#0a0a0a;line-height:1.3;padding:0 16px 16px 16px;text-align:left;width:100%;font-weight:normal;">
+        <%= email_excerpt(t.first_post.cooked) %>
       </td>
     </tr>
   </tbody>
